--- a/covid_19_app.ipynb
+++ b/covid_19_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "764ca38d",
    "metadata": {
     "scrolled": false
@@ -181,7 +181,7 @@
        "2020-01-12                    0           0                  0  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "387f50d1",
    "metadata": {},
    "outputs": [],
@@ -223,15 +223,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "8a35d50c",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash app running on http://127.0.0.1:8050/\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/artemfadeev/Code/PycharmProjects/new/lib/python3.11/site-packages/dash/dash.py:525: UserWarning:\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/dash/dash.py:525: UserWarning:\n",
       "\n",
       "JupyterDash is deprecated, use Dash instead.\n",
       "See https://dash.plotly.com/dash-in-jupyter for more details.\n",
@@ -253,17 +260,24 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x117595f10>"
+       "<IPython.lib.display.IFrame at 0x1104b64d0>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Dash app running on http://127.0.0.1:8050/\n"
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/_plotly_utils/basevalidators.py:105: FutureWarning:\n",
+      "\n",
+      "The behavior of DatetimeProperties.to_pydatetime is deprecated, in a future version this will return a Series containing python datetime objects instead of an ndarray. To retain the old behavior, call `np.array` on the result\n",
+      "\n",
+      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/_plotly_utils/basevalidators.py:105: FutureWarning:\n",
+      "\n",
+      "The behavior of DatetimeProperties.to_pydatetime is deprecated, in a future version this will return a Series containing python datetime objects instead of an ndarray. To retain the old behavior, call `np.array` on the result\n",
+      "\n"
      ]
     }
    ],
@@ -291,14 +305,6 @@
     "if __name__ == \"__main__\":\n",
     "    app.run_server(mode='external')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "718a7a8d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
